force-app/main/default/objects/student__c/student__c.object-meta.xml
<CustomObject>
    <description>This is student object. Test description</description>
    <label>Student</label>
    <nameField>
        <displayFormat>st-{0000}</displayFormat>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>