force-app/main/default/objects/student__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <inlineHelpText>Enter address</inlineHelpText>
    <label>address</label>
    <type>TextArea</type>
</CustomField>