force-app/main/default/objects/student__c/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <label>College Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>