force-app/main/default/objects/student__c/fields/Course_opted__c.field-meta.xml
<CustomField>
    <fullName>Course_opted__c</fullName>
    <description>this is course opted description</description>
    <inlineHelpText>Please select course</inlineHelpText>
    <label>Course Opted</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>stream_opted__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Course</valueSetName>
    </valueSet>
</CustomField>