force-app/main/default/objects/student__c/fields/Deposited_Fees__c.field-meta.xml
<CustomField>
    <fullName>Deposited_Fees__c</fullName>
    <label>Deposited Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>