force-app/main/default/objects/student__c/fields/Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Name__c</fullName>
    <inlineHelpText>Enter your father name</inlineHelpText>
    <label>Father Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>