force-app/main/default/objects/student__c/fields/Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Year__c</fullName>
    <label>Graduation Year</label>
    <type>Date</type>
</CustomField>