force-app/main/default/objects/student__c/fields/Initial_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fees_Paid__c</fullName>
    <label>Initial Fees Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>