force-app/main/default/objects/student__c/fields/Linked_User__c.field-meta.xml
<CustomField>
    <fullName>Linked_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>linkedusers</relationshipName>
    <type>Lookup</type>
</CustomField>