force-app/main/default/objects/student__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <inlineHelpText>Enter you phone number</inlineHelpText>
    <label>phone</label>
    <type>Phone</type>
</CustomField>