force-app/main/default/objects/student__c/fields/Salesforce_skill_set__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_skill_set__c</fullName>
    <label>Salesforce skill set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>SmartSheets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>