force-app/main/default/objects/student__c/fields/Scolarship_Amount__c.field-meta.xml
<CustomField>
    <fullName>Scolarship_Amount__c</fullName>
    <label>Scholarship Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>