force-app/main/default/objects/student__c/fields/stream_opted__c.field-meta.xml
<CustomField>
    <fullName>stream_opted__c</fullName>
    <description>this is description</description>
    <inlineHelpText>Enter your stream</inlineHelpText>
    <label>Stream Opted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile App Development</fullName>
            </value>
            <value>
                <fullName>Web Development</fullName>
            </value>
            <value>
                <fullName>Cloud computing</fullName>
            </value>
            <value>
                <fullName>Devops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>