force-app/main/default/objects/student__c/fields/Student_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is student email descriptiomn</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter your email</inlineHelpText>
    <label>Student Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>