force-app/main/default/objects/student__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <description>This is student name description</description>
    <inlineHelpText>Enter you name</inlineHelpText>
    <label>Student Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>