force-app/main/default/objects/student__c/fields/sum_of_all_ratings__c.field-meta.xml
<CustomField>
    <fullName>sum_of_all_ratings__c</fullName>
    <label>sum of all ratings</label>
    <summarizedField>Rating__c.Rating_out_of_10__c</summarizedField>
    <summaryForeignKey>Rating__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>