force-app/main/default/objects/student__c/fields/total_no_of_ratings__c.field-meta.xml
<CustomField>
    <fullName>total_no_of_ratings__c</fullName>
    <label>total no of ratings</label>
    <summaryForeignKey>Rating__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>