force-app/main/default/objects/student__c/fields/Working_Experience__c.field-meta.xml
<CustomField>
    <fullName>Working_Experience__c</fullName>
    <label>Working Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>