force-app/main/default/objects/student__c/recordTypes/Experience_RT.recordType-meta.xml
<RecordType>
    <fullName>Experience_RT</fullName>
    <active>true</active>
    <label>Experience RT</label>
</RecordType>