force-app/main/default/objects/student__c/recordTypes/Graduate_RT.recordType-meta.xml
<RecordType>
    <fullName>Graduate_RT</fullName>
    <active>true</active>
    <label>Graduate RT</label>
</RecordType>