force-app/main/default/objects/student__c/validationRules/email_should_not_start_with_support_doma.validationRule-meta.xml
<ValidationRule>
    <fullName>email_should_not_start_with_support_doma</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
REGEX(  Current_Company__c  , &quot;^[a-zA-Z]+@[a-zA-Z0-9.-]+\\.[a-zA-z]{2,}$&quot;))</errorConditionFormula>
    <errorMessage>Invalid email broooo</errorMessage>
</ValidationRule>