force-app/main/default/objects/student__c/validationRules/Validation_rule_for_age.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_rule_for_age</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER(Age__c)) || (ISNUMBER(Age__c) &amp;&amp; VALUE(Age__c) &lt; 0)</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>The age should be number</errorMessage>
</ValidationRule>