force-app/main/default/objects/student__c/validationRules/Validation_rule_for_college.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_rule_for_college</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (
  CONTAINS( LOWER(College_Name__c) , &quot;vit&quot;) ||
  CONTAINS( LOWER(College_Name__c), &quot;pict&quot;) ||
  CONTAINS( LOWER(College_Name__c), &quot;pccoe&quot;)
)</errorConditionFormula>
    <errorDisplayField>College_Name__c</errorDisplayField>
    <errorMessage>College not found</errorMessage>
</ValidationRule>