force-app/main/default/objects/student__c/validationRules/Validation_rule_for_phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_rule_for_phone</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(phone__c, &quot;^[789]{1}[0-9]{2}-[0-9]{3}-[0-9]{4}$&quot;))</errorConditionFormula>
    <errorMessage>Invalid phone number format</errorMessage>
</ValidationRule>