force-app/main/default/objects/student__c/listViews/Students_Leads_Memebership_Queue_student.listView-meta.xml
<ListView>
    <fullName>Students_Leads_Memebership_Queue_student</fullName>
    <filterScope>Queue</filterScope>
    <label>Students &amp; Leads Memebership Queue</label>
    <queue>Students_Leads_Memebership_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>